--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-.selected {
-    filter: url(#blurFilter);
-}
-
-.disabled, .fadeOut {
-    pointer-events: none;
-}
-
 @keyframes fadeOut {
     0% { opacity: 1; }
     100% { opacity: 0; }
@@ -24,10 +16,121 @@
     animation: fadeOut 0.25s ease-in-out forwards;
 }
 
+.disabled, .fadeOut {
+    pointer-events: none;
+}
+
+.selected {
+    filter: url(#blurFilter);
+}
+
+.horizontalResizingHandle {
+    cursor: col-resize;
+}
+
+.verticalResizingHandle {
+    cursor: row-resize;
+}
+
 svg {
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
     -o-user-select: none;
     user-select: none;
+    cursor: crosshair;
+}
+
+rect {
+    fill: transparent;
+}
+
+foreignObject > body {
+    margin: 0px;
+}
+
+foreignObject > body > * {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+}
+
+input[type="text"] {
+    border-radius: 4px;
+    padding: 4px;
+}
+
+input[type="text"]:focus {
+    outline: 0;
+}
+
+textarea,input[type="text"] {
+	resize: none;
+    border: none;
+}
+
+text,textarea,input[type="text"] {
+    font-family: Verdana;
+    font-size: 12px;
+    font-style: normal;
+    font-variant: normal;
+}
+
+text {
+    text-anchor: middle;
+    dominant-baseline: central; /* alignment-baseline */
+    pointer-events: none;
+}
+
+/* Colors */
+
+svg {
+    background: #1F1F1F;
+}
+
+::selection {
+    color: #FFFFFF;
+    background: #333333;
+}
+
+input[type="text"] {
+    background: #1F1F1F;
+}
+
+input[type="text"]:hover {
+    background: #2D2D2D;
+}
+
+input[type="text"]:focus {
+    background: #808080;
+}
+
+text,textarea,input[type="text"] {
+    fill: #FFF;
+    color: #FFF;
+}
+
+.panePannel {
+    fill: #424242;
+}
+
+.separator {
+
+}
+
+.speechBalloon {
+    stroke: #FFFFFF;
+    fill: #383838;
+}
+
+.tabHandle {
+    fill: #2B2B2B;
+}
+
+.tabHandle:hover {
+    fill: #3A3A3A;
+}
+
+.tabHandle:active,.activeTabHandle {
+    fill: #424242;
 }
