Improved LabelPanel and ImagePanel. Improved checkmark of checkbox. Added modal overlay stack. Refactored child append and reorder into insert method. Refactored ConfigurableSplitViewPanel child relativeSize.

--- a/style.css
+++ b/style.css
@@ -84,12 +84,11 @@ text {
     pointer-events: none;
 }
 
-.checkbox > text {
+.checkbox > image {
     opacity: 0;
-    dominant-baseline: middle;
 }
 
-.checkbox.active > text {
+.checkbox.active > image {
     opacity: 1;
 }
 
