Adds missing style for IndexedListPanel.

--- a/style.css
+++ b/style.css
@@ -200,3 +200,7 @@ rect.toolbarMenuButton:active,rect.toolbarMenuButton.active {
 .slider > rect.sliderBar {
     fill: rgb(83, 125, 191);
 }
+
+.indexedListHeader {
+    fill: rgb(49, 49, 49);
+}
