--- a/style.css
+++ b/style.css
@@ -10,17 +10,12 @@ circle.selected,rect.selected,path.selected {
     stroke: rgb(200, 220, 255);
 }
 
-:not(textarea):not(input).focused {
+.focused {
     filter: url(#blurFilter);
 }
 
 circle.focused,rect.focused,path.focused {
     stroke: rgb(255, 255, 220);
-}
-
-textarea.focused,input[type="text"].focused {
-    border: 1px solid rgb(255, 255, 220);
-    padding: 2px;
 }
 
 .horizontalResizingHandle {
@@ -49,10 +44,15 @@ rect {
 }
 
 foreignObject > body {
-    margin: 0px;
+    border: 1px solid transparent;
+    box-sizing: border-box;
 }
 
-foreignObject > body > * {
+foreignObject.focused > body {
+    border: 1px solid rgb(255, 255, 220);
+}
+
+foreignObject > body, foreignObject > body > * {
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -124,6 +124,16 @@ textarea:focus,input[type="text"]:focus {
 text,textarea,input[type="text"] {
     fill: #FFF;
     color: #FFF;
+}
+
+input[type="file"] {
+    width: 0px;
+    height: 0px;
+    visibility: hidden;
+}
+
+label {
+    display: inline-block;
 }
 
 rect.button {
